Day6/Day_6/.metadata/.plugins/org.eclipse.cdt.ui/Day_6.2.build.log
11:02:23 **** Incremental Build of configuration Debug for project Day_6.2 ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:49:10: error: non-aggregate type 'Complex' cannot be initialized with an initializer list
        Complex c8 = { 90, 100 };
                ^    ~~~~~~~~~~~
1 error generated.
make: *** [src/Main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

11:02:25 Build Failed. 2 errors, 0 warnings. (took 1s.756ms)

